# VetIOS

./: .env.example  .gitignore  002_partner_billing_quotas_analytics.sql  CUsersAdministratorNew  LICENSE  README.md  SECURITY.md  apps_web_app_auth_page.tsx  apps_web_components_auth_TabbedAuthForm.tsx  build-results.txt  check.html  conflicts.txt  fix_middleware.js  inference-route-debug.ts  migrate.js  openapi.yaml  package.json  patch.js  patch2.js  patch_dashboard.js  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  simulator.html  supabase_env.txt  supabase_env5.txt  supabase_restart.txt  supabase_start.txt  supabase_start2.txt  supabase_start3.txt  supabase_start3_utf8.txt  supabase_status.txt  test-results.txt  train_setup.py  turbo.json  vercel.json
.github/: pull_request_template.md
apps/ml-training/: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  railway.json
apps/ml-training/calibration/: drift_monitor.py
apps/ml-training/flywheel/: aggregate.py
apps/ml-training/vetios_ml/: __init__.py  augmented_train.py  calibration.py  config.py  drift.py  evaluate.py  explainability.py  register_model.py  retrain.py  serve.py  shadow_mode.py  startup.py  train.py
apps/ml-training/vetios_ml/data/: __init__.py  dataset_builder.py  feature_views.py  simulation_sampler.py
apps/ml-training/vetios_ml/flywheel/: __init__.py  aggregate.py
apps/ml-training/vetios_ml/models/: __init__.py  diagnosis_model.py  risk_model.py
apps/ml-training/vetios_ml_training.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+1386 files in other folders)
